--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,16 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
 r.GenerateMeshDistanceFields=True
+r.DefaultFeature.AntiAliasing=2
+r.DefaultFeature.LightUnits=1
+r.Shadow.CSM.MaxMobileCascades=2
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure=True
+r.NormalMapsForStaticLighting=False
+r.MobileMSAA=1
+r.SupportStationarySkylight=True
+r.SupportLowQualityLightmaps=True
+r.SupportAtmosphericFog=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
