--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -41,6 +41,7 @@ r.MobileMSAA=1
 r.SupportStationarySkylight=True
 r.SupportLowQualityLightmaps=True
 r.SupportAtmosphericFog=True
+r.AllowGlobalClipPlane=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
